syntax = "proto3";

package user;
option go_package = "github.com/bag-huyag/user-service/proto/gen/user";

service UserService {
  rpc GetUsers(Empty) returns (UserList);
  rpc GetUser(UserId) returns (User);
  rpc CreateUser(NewUser) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(UserId) returns (Empty);
}

message Empty {}

message UserId {
  string id = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message NewUser {
  string name = 1;
  string email = 2;
}

message UserList {
  repeated User users = 1;
}